# PHASE0

./: .gitignore  ARCHER_DASHBOARD_GUIDE.md  CLEAN_STRUCTURE_SUMMARY.md  CONDA_ERROR_PREVENTION_SYSTEM.md  DOCKER_DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  SYSTEM_DESIGN_DIAGRAM.md  SYSTEM_UPDATE_SUMMARY.md  bfsi-archer-dashboard.html  bfsi-frontend.html  bfsi-functional-dashboard.html  docker-compose.prod.yml  docker-compose.yml  docker.env  env.example  package-lock.json  package.json  pyproject.toml  requirements-training.txt  requirements.txt  requirements_huggingface_local.txt  start_bfsi_integration.py
.github/workflows/: ci.yml
alembic/: env.py
backend/: Dockerfile  README.md  requirements.txt
backend/ai-agents/: Dockerfile.huggingface
backend/ai-agents/agents_organized/: ARCHITECTURE_ALIGNMENT_ANALYSIS.md  COMPLETE_STRUCTURE_OVERVIEW.md  FINAL_ARCHITECTURE_ALIGNMENT.md  HUGGINGFACE_INTEGRATION_GUIDE.md  README.md  STRUCTURE_DIAGRAM.md  __init__.py  requirements_huggingface.txt
backend/ai-agents/src/: __init__.py
backend/ai-agents/tests/: __init__.py
backend/config/: alembic.ini  bfsi_model_stack_config.json  docker-compose.yml  env.example  environment.yml  grc_dataset.json  pyproject.toml  requirements.txt  security_test_config.json  setup.py  user_config.json
backend/deployment/: Dockerfile  docker-compose.yml
backend/deployment/docker/: Dockerfile
backend/docs/: API_DOCUMENTATION.md  COMPLETION_SUMMARY.md  DEVELOPMENT_GUIDE.md  GRC_PLATFORM_SUMMARY.md  README.md
backend/models/: user_repository.py
backend/scripts/: init_db.py  seed_demo_data.py  simple_auth_test.py  test_auth.py  test_bfsi_ai_integration.py
backend/security/: security_auth.py  security_config.py  security_csp_middleware.py  security_data_access.py  security_middleware.py  security_test.py
backend/services/: local_huggingface_service.py
backend/src/: __init__.py
backend/src/api/: __init__.py
backend/utils/: app_with_validation.py  connection_pooling_example.py  database_connection_manager.py  startup_validation.py
config/: environment.py  secrets_management.py
config/apache/: bfsi-api.conf
config/database/: README_DATA_POPULATION.md  bfsi_sample_data.sql  bfsi_sample_data_clean.sql  healthcare_sample_data.sql  manufacturing_sample_data.sql  populate_all_sample_data.sql  schema.sql  telecom_sample_data.sql  users_and_organizations_data.sql
config/docker/: .htpasswd  docker-compose.production.yml
config/environment/: production.env
config/environments/: development.env  production.env  testing.env
config/nginx/: bfsi-api.conf  proxy_params
config/security/: security-hardening.md
data/validation_results/: validation_bfsi-policy-assistant_20250920_111354.json  validation_bfsi-policy-assistant_20250920_204231.json
deployment/docker/: README.md  env.template
docs/: AI_AGENT_STRUCTURE_SUMMARY.md  BFSI_INTEGRATION_COMPLETE.md  BFSI_INTEGRATION_README.md  BFSI_LLM_TRAINING_COMPLETE.md  BFSI_LOCAL_AI_INTEGRATION_COMPLETE.md  BFSI_MODEL_IMPROVEMENT_SUMMARY.md  CONDA_ENVIRONMENT_SETUP.md  CORS_SECURITY_IMPLEMENTATION.md  CSP_SECURITY_IMPLEMENTATION.md  CSP_SECURITY_IMPLEMENTATION_GUIDE.md  DASHBOARD_DATA_EXPLANATION.md  FUNCTIONAL_DASHBOARD_COMPLETE.md  GRC_LLM_TRAINING_README.md  JWT_PRODUCTION_DEPLOYMENT_GUIDE.md  LOCAL_AI_SETUP_README.md  LOGIN_RATE_LIMITING_IMPLEMENTATION.md  NGINX_SECURITY_UPDATE_SUMMARY.md  OVERFLOW_HANDLING_IMPLEMENTATION.md  PHASE0_STRUCTURE_ANALYSIS.md  POSTGRESQL_MIGRATION_SUMMARY.md  PRODUCTION_SECRETS_MANAGEMENT.md  PRODUCTION_VALIDATION_GUIDE.md  PRODUCTION_VALIDATION_IMPLEMENTATION_SUMMARY.md  PROJECT_REORGANIZATION_PLAN.md  PROJECT_REORGANIZATION_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_TEST_IMPROVEMENTS.md  SQLALCHEMY_2_0_MIGRATION_SUMMARY.md  SYSTEM_CHECK_REPORT.md  TODO_COMPLETION_SUMMARY.md
docs/architecture/: INDEX.md  grc_platform_architecture.md  industry_multi_agent_implementation.md
docs/development/: conda_error_prevention_guide.md  fullstack_setup.md  huggingface_docker_setup.md  implementation_guides.md  project_structure.md  project_structure_standards.md  readme_implementation.md  real_data_testing_guide.md
docs/user-guides/: complete_user_guide.md  quick_start_guide.md
frontend/: .eslintrc.json  README.md  package.json
frontend/src/: App.jsx  index.css
grc-platform/: README.md  env.example  package.json
grc-platform/frontend/: package.json
infrastructure/nginx/: nginx.conf
scripts/: deploy_with_validation.py  docker-manager.py  generate_production_secrets.py  generate_sample_data.py  pre_deployment_check.py  sync_workflow.py  validate_config.py  validate_production_config.ps1  validate_production_config.py  verify_nginx_security.ps1  verify_nginx_security.sh
scripts/data/: load_bfsi_data.py  load_bfsi_sample_data.py
scripts/deployment/: start_bfsi_frontend.py  start_local_ai_services.py
scripts/maintenance/: conda_backup_restore.py  conda_health_check.py  conda_monitor.py  conda_monitor_task.xml  quick_policy_upload.py  real_bfsi_data_integration.py  realtime_bfsi_cli.py  start_conda_monitor.bat  system_update_checker.py  upload_policy_cli.py  upload_real_policy.py
scripts/setup/: environment_setup.py  legacy_start_services.py  local_ai_client.py  local_ai_config.py  setup.bat  setup.sh  setup_conda_env.py  setup_directories.ps1  start_fullstack.bat  start_fullstack.sh  start_huggingface.bat  start_huggingface.sh  start_services.bat  start_services.ps1  start_services.py
scripts/starters/: README.md  simple_backend_server.py  start_bfsi_frontend.py  start_bfsi_integration.py
scripts/testing/: quick_integration_test.py  run_complete_real_data_testing.py  setup_real_data_testing.py  test_ai_agents_status.py  test_all_apis.ps1  test_api.ps1  test_embeddings.py  test_fullstack_integration.py  test_huggingface_integration.py  test_real_bank_employee_journey.py  test_real_data_apis.py
tools/monitoring/: check_services_status.py  simple_status_check.py
tools/utilities/: create_pdf.py
training/scripts/: enhanced_bfsi_training.py  train_grc_llm.py
(+393 files in other folders)
